# AegisAI-NIDPS

./: .dockerignore  .env.example  .gitignore  AegisAI-NIDPS-Implementation-Guide.md  AegisAI-NIDPS-Master-Prompt.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile
apps/dashboard/: Dockerfile  eslint.config.js  index.html  nginx-main.conf  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/worker/: Dockerfile
docs/: BACKLOG.md  DATABASE.md  DATASET_REVIEW_UNSW_NB15.md  DECISIONS.md  DEFINITION_OF_DONE.md  DEPLOYMENT_STRATEGY.md  DETECTION_ARCHITECTURE.md  FINAL_PROJECT_STATUS.md  ML_PLAN.md  POST_MVP_GATE_P1_COMPLETION_REPORT.md  POST_MVP_GATE_P2_COMPLETION_REPORT.md  POST_MVP_GATE_P2_PLAN.md  POST_MVP_GATE_P3_COMPLETION_REPORT.md  POST_MVP_GATE_P3_PLAN.md  POST_MVP_GATE_P4_COMPLETION_REPORT.md  POST_MVP_GATE_P4_PLAN.md  POST_MVP_GATE_P4_REPRODUCIBILITY_RUNBOOK.md  POST_MVP_GATE_P5_COMPLETION_REPORT.md  POST_MVP_GATE_P5_PLAN.md  POST_MVP_SYNTHETIC_ROADMAP.md  PRD.md  PREVENTION_SAFETY.md  REPOSITORY_STRUCTURE.md  REQUIREMENTS.md  RISK_REGISTER.md  SCHEMAS.md  SPRINT_0_COMPLETION_REPORT.md  SPRINT_0_DESIGN_REVIEW.md  SPRINT_0_PLANNING_REPORT.md  SPRINT_1_COMPLETION_REPORT.md  SPRINT_2_COMPLETION_REPORT.md  SPRINT_3_COMPLETION_REPORT.md  SPRINT_3_IMPLEMENTATION_PLAN.md  SPRINT_4_COMPLETION_REPORT.md  SPRINT_4_IMPLEMENTATION_PLAN.md  SPRINT_5_GATE_5SA_COMPLETION_REPORT.md  SPRINT_5_GATE_5SB_COMPLETION_REPORT.md  SPRINT_5_GATE_5SC_COMPLETION_REPORT.md  SPRINT_5_IMPLEMENTATION_PLAN.md  SPRINT_5_NO_PUBLISHER_CONTACT_FALLBACK.md  (+12 more)
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md  DATA_FLOW.md
docs/data/: SYNTHETIC_FEATURE_QUALITY_REPORT.md  UNSW_NB15_ACQUISITION_CANDIDATES_2026-07-14.json  UNSW_NB15_OFFICIAL_SOURCE_REVIEW_2026-07-14.md  UNSW_NB15_PREACQUISITION_REVIEW_2026-07-14.md  UNSW_NB15_PUBLISHER_CLARIFICATION_REQUEST.md
docs/features/: FEATURE_DICTIONARY_V1.json  FEATURE_DICTIONARY_V1.md
docs/portfolio/: ARCHITECTURE_OVERVIEW.md  CLAIMS_REVIEW.md  DEMO_RUNBOOK.md  DEMO_TRANSCRIPT.md  EVIDENCE_INDEX.md  README_PORTFOLIO.md  SPRINT_HISTORY.md  THREAT_MODEL_SUMMARY.md
docs/security/: GATE_5SB_DEPENDENCY_REVIEW.md  GATE_5SB_SBOM.cdx.json
docs/threat-model/: THREAT_MODEL.md
infrastructure/docker/: Dockerfile.test
migrations/: env.py
migrations/versions/: 0001_sprint1_identity.py  0002_sprint2_ingestion.py  0003_sprint3_detection.py  0004_sprint4_features.py  0005_sprint5_preacquisition.py  0006_sprint5_synthetic_gate.py  0007_sprint5_synthetic_training.py  0008_sprint5_synthetic_registry.py  0009_sprint6_anomaly_ensemble.py  0010_sprint7_explainability_intelligence.py  0011_sprint8_alert_incident_soc.py  0012_sprint9_prevention_sim.py  0013_post_mvp_monitoring_feedback.py  0014_post_mvp_observability.py
scripts/: check_secrets.py  check_simulation_only.py  create_p5_portfolio_evidence.py  create_reproducibility_evidence.py
services/aegis_services/: __init__.py  prevention.py  reproducibility.py
tests/: conftest.py
tests/integration/: test_anomaly_api.py  test_authentication.py  test_dataset_acquisition_api.py  test_detection.py  test_features.py  test_ingestion.py  test_monitoring.py  (+7 more)
(+175 files in other folders)
