[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisai-nidps"
version = "0.1.0"
description = "Simulation-only foundation for the AegisAI network intrusion detection platform"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
  "celery[redis]>=5.4,<6",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<7",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.30,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8,<2",
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pip-audit>=2.7,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["apps/api", "apps/worker", "services"]
include = ["aegis_api*", "aegis_worker*", "aegis_services*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=aegis_api --cov=aegis_worker --cov=aegis_services --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api", "apps/worker", "services", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["apps/api", "apps/worker", "services"]
packages = ["aegis_api", "aegis_worker", "aegis_services"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
